# invoice-maker

./: Cargo.toml  sender.toml
.github/workflow/: release.yml
.github/workflows/: release.yml
src/: main.rs  model.rs
templates/: invoice.tera
