[package]
name = "invoice-maker"
version = "0.1.5"
edition = "2024"

[dependencies]
eframe = "0.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
inquire = { version = "0.7", features = ["date"] }
slug = "0.1"
tera = "1"
zipcodes = "0.4.0"
directories = "5.0"
comfy-table = "7.1.0"
regex = "1.10.4"
rfd = "0.16"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "2.2"
semver = "1.0"